<resources>
    <string name="app_name">"Court Counter "</string>
    <string name="score">"0"</string>
    <string name="three_points">"+3 Points"</string>
    <string name="two_points">"+2 Points"</string>
    <string name="free_shot">"Free Throw"</string>
    <string name="reset_button">"Reset"</string>
    <string name="celtics_logo">"Boston celtics logo"</string>
    <string name="bulls_logo">"Chicago bulls logo"</string>
</resources>
