<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:context="com.example.android.courtcounter.MainActivity">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="16dp">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:contentDescription="@string/celtics_logo"
                android:src="@drawable/boston" />


            <TextView
                android:id="@+id/team_a_score1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:fontFamily="sans-serif-light"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:text="@string/score"
                android:textColor="#000000"
                android:textSize="56sp" />

            <Button
                style="@style/CustomButton"
                android:layout_marginBottom="16dp"
                android:onClick="addThreeForBoston"
                android:text="@string/three_points" />

            <Button
                style="@style/CustomButton"
                android:layout_marginBottom="16dp"
                android:onClick="addTwoForBoston"
                android:text="@string/two_points" />

            <Button
                style="@style/CustomButton"
                android:onClick="freeThrowBoston"
                android:text="@string/free_shot" />


        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimary">

        </View>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="16dp">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:contentDescription="@string/bulls_logo"
                android:src="@drawable/bulls" />

            <TextView
                android:id="@+id/team_a_score2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:fontFamily="sans-serif-light"
                android:padding="8dp"
                android:paddingTop="8dp"
                android:text="@string/score"
                android:textColor="@color/Black"
                android:textSize="56sp" />

            <Button
                style="@style/CustomButton"
                android:layout_marginBottom="16dp"
                android:onClick="addThreeForBulls"
                android:text="@string/three_points" />

            <Button
                style="@style/CustomButton"
                android:layout_marginBottom="16dp"
                android:onClick="addTwoForBulls"
                android:text="@string/two_points" />

            <Button
                style="@style/CustomButton"
                android:onClick="freeThrowBulls"
                android:text="@string/free_shot" />

        </LinearLayout>


    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="16dp"
        android:onClick="resetScore"
        android:text="@string/reset_button" />

</RelativeLayout>